# hdemucs_flax

./: .gitignore  README.md  __init__.py  audio_utils.py  conv.py  convert.ipynb  demucs.py  flax_test.ipynb  module.py  pyproject.toml  separate.py  test_compare.py  test_module.py  torch_utils.py  utils.py
notebooks/: convert.ipynb  flax_test.ipynb  hook_debug.py  stft_debug.ipynb
tests/: test_checkpoint_dtype.py  test_compare.py  test_jit.py  test_leaks.py  test_model.py  test_module.py  test_separate.py  test_submodules.py
