[project]
name = "hdemucs"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "flatbuffers>=25.2.10",
    "flax==0.10.4",
    "jupyter>=1.1.1",
    "orbax-checkpoint==0.11.9",
    "pytest>=8.3.4",
    "soundfile>=0.13.1",
    "torch>=2.6.0",
    "torchaudio>=2.6.0",
    "tqdm>=4.67.1",
    "transformers>=4.48.3",
    "treescope>=0.1.9",
]

[dependency-groups]
dev = [
    "librosa>=0.11.0",
    "matplotlib>=3.10.1",
    "pytest-benchmark>=5.1.0",
    "pytest-sugar>=1.0.0",
    "pytest-xdist>=3.6.1",
    "ruff>=0.11.2",
]
api = [
    "fastapi[standard]>=0.115.12",
    "flatbuffers>=25.2.10",
    "jax>=0.6.0",
    "msgpack>=1.1.0",
]
[tool.pytest.ini_options]
testpaths = [
    "tests",
]
addopts = [
 "--numprocesses=auto",
]
